--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "simple-statistics": "^7.7.5",
     "typescript": "^4.7.0-dev.20220408"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.24"
   }
 }
