--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "strict": true,
         "skipLibCheck": true,
         "noImplicitAny": false,
+        "useUnknownInCatchVariables": false,
     },
     "files": [
         "index.js"
